--- a/main.tex
+++ b/main.tex
@@ -187,21 +187,10 @@ I do think that it is plausible that such dialectical systems will make great st
 
 % Perhaps they can also help to encourage non-Oracle use of these models as well.
 
-This is especially important when considering generative AI with the aim of generating scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can only be considered to ``live'' in a derivative ``world''.
-
-
-Ultimately, I see the problem of how to evaluate  scientific discovery from generative models (especially in areas like fundamental physics) as roughly falling into debates over convergent realism and structural realism.  A dialectical system may provide immediate benefits, or mitigate limitations of current generative AI.  However, the long term widespread use may result in diminishing or even negative returns when the trajectory of the entirety of human civilization is considered.  Our use of dialectical systems might lead to structural theoretical constructs which contain terms which at best do no better than human derived theories.  At worse, we might be inundated with a flood of non-efficiently testable or unfalsifiable theories.  This is a point arguably stemming from Kant, and Popper's reinterpretation:
-
-\begin{quote}
-    If I were to give some sort of modernized reconstruction, or reinterpretation, of Kant, deviating from Kant’s own view of what he had done, I should say that Kant showed that the metaphysical principle of reasonableness or self-evidence does not lead unambiguously to one and only one result or theory. It is always possible to argue, with similar apparent reasonableness, in favour of a number of different theories, and even of opposite theories. Thus if we get no help from experience, if we cannot make experiments or observations which at least tell us to eliminate certain theories—namely those which although they may seem quite reasonable, are contrary to the observed facts—then we have no hope of ever settling the claims of competing theories.
-    \citep[p. 439]{PopperCR1963}
-\end{quote}
-
-%The situation is the same we have been in with respect to human derived theories, but at least we might give an argument why we should dignify a human's unfalsifiable theory.  Perhaps we respect the phenomenological experiences of fellow humans like ourselves.  But generative models `live' in a derivative world.  Their phenomenological `experiences' are second order compared to our own.  These models do not have experiences like ours with which to ground their theories.  
+This is especially important when considering generative AI with the aim of generating scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can only be considered to `live' in a derivative `world'.
 
 
 
-There theories may be in principle falsifiable, but we should also consider whether there might be sophisticated components of a generative theory (linguistic, mathematical, or otherwise) which exceed the capacity of networks of scientists to efficiently evaluate.  I argue such a potential situation represents a risk from generative AI, and it may happen in an accumulative manner as outlined in \citep{Kasirzadeh2024WIP}.  
 
 %Perhaps even more troubling, is that the transcendental dialectic point from Kant means that 
 
@@ -302,7 +291,7 @@ Specialized and narrow models (e.g. for predicting turbulent flow) are of a whol
 
 \subsection{Philosophical Foundations for Architectural Innovations}
 
-We would like to engineer a mechanism or process which tends or approaches (perhaps even converge) a "less wrong" state.  In philosophy, many will have heard of the Socratic method, for example.  John Stuart Mill's On Liberty is a more recent example, where the process of open dialogue is more important than the actual state of truth.  In a slogan, we want a living truth, not a dead dogma.  I take this to mean that if we want to engineer veridical artificial systems we must prioritize engineering a robust process and not an efficient look up.  This is the difference between the Socratic method and consulting an Oracle.
+We would like to engineer a mechanism or process which tends or approaches a "less wrong" state.  In philosophy, many will have heard of the Socratic method, for example.  John Stuart Mill's On Liberty is a more recent example, where the process of open dialogue is more important than the actual state of truth.  In a slogan, we want a living truth, not a dead dogma.  I take this to mean that if we want to engineer veridical artificial systems we must prioritize engineering a robust process and not an efficient look up.  This is the difference between the Socratic method and consulting an Oracle.
 
 In general, we can call a structured dialogue between disagreeing interlocutors a dialectic.  The rigorous method of pitting neural networks against each other is, I argue, a method which may be a reliable way to mitigate errors and biases in an artificial system. 
 
@@ -372,11 +361,14 @@ The approach in \citep{Norelli2022} has some interesting comments on learning ex
 \end{quote}
 
 
-If we take seriously any of the arguments from high profile researchers on catastrophic or accumulative risk in the development and deployment of AI systems (in particular also the drive towards AGI), then philosophers should care about the direction of architectural innovations in AI models for the same reason that they care about what processes produce reliable knowledge about the world.  Such an undertaking is fundamentally interdisciplinary in a critically important way.  In my opinion, this is more than just about ethics or safety, this is about the integrity of human values and trajectory of civilization.
+
 
 %\subsection{Machine Epistemology, Scientific Discovery, and Ramsey Sentences}
 
-There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance bias (or even remove the bias totally, which under some  understanding, e.g. that of \citep{Mitchell1980}, is not particularly plausible since effective models learn inductive bias), which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  Pitting bias against bias in a dialectical architecture seems more plausible to me.  Related is the well-known No Free Lunch result \citep{Wolpertetal1997}, and we should not expect one model to be able to be optimized to handle all biases.  However, a plurality of specialized models interacting with each other seems to exploit somewhat of a loophole if compute is abundant.
+There is a large amount of literature about bias in artificial neural network models.  However, in my opinion this literature focuses mainly on the ethics and corrective procedures in order to balance bias (or even remove the bias totally, which under some  understanding, e.g. that of \citep{Mitchell1980}, is not particularly plausible since effective models learn inductive bias), which I think is missing a much larger potential issue that tech and AI ethicists should be aware of.  Pitting bias against bias in a dialectical architecture seems more plausible to me.  Related is the well-known No Free Lunch result \citep{Wolpertetal1997}, and we should not expect one model to be able to be optimized to handle all biases.  However, a plurality of specialized models interacting with each other seems to exploit somewhat of a loophole if compute is abundant. [STERKENBERG?]
+
+
+If we take seriously any of the arguments from high profile researchers on catastrophic or accumulative risk in the development and deployment of AI systems (in particular also the drive towards AGI), then philosophers should care about the direction of architectural innovations in AI models for the same reason that they care about what processes produce reliable knowledge about the world.  Such an undertaking is fundamentally interdisciplinary in a critically important way.  In my opinion, this is more than just about ethics or safety, this is about the integrity of human values and trajectory of civilization.
 
 
 
@@ -424,7 +416,7 @@ A major follow up question is whether the model can learn the same or new \emph{
 
 To truly `learn' theoretical laws from scratch, what would the training data need to look like, and how do mechanisms in the model `digest' the data?  If we found something which looked like a new theoretical law in the architecture or output of a model, how would we evaluate it?  What tests could we do to find out whether a model has learned different theoretical laws from our own, or new ones?  Would it matter, if the empirical laws remained isomorphic?
 
-Ramsey sentences attempt to do without theoretical terms, so perhaps we could coordinate the machine's epistemology with our own through such a formalization.  See e.g. \citep[\S 26]{Carnap1966} for a philosophical introduction to Ramsey sentences.
+Ramsey sentences attempt to do without theoretical terms, so perhaps we could coordinate the machine's epistemology with our own through such a formalization.  See e.g. \citep[\S 26]{Carnap1966} for a philosophical introduction to Ramsey sentences, which has been one central component to the structural realism debate.  A well-known objection to structural realism is from Newman [SEE E.G. DEMOPOULOS].  
 
 
 %The recent launch of OpenAI's model Sora \citep{Sora2024} brought to light a question about the capability to imitate physics, and whether scene simulators in the future like Sora might be capable to do what traditionally is the domain of persistent 3D game engines and actual physical theories.  Obvious limitations, like in-persistent objects behind occlusions, indicate that a model like Sora does not have a physics world model which is comparable to a 3D game engine, where such persistence is trivially built in.  However, we can imagine a Sora-like model which overcomes many of the current drawbacks---even all of them.  In that case, what is the difference between a 3D game engine and Sora?  Would it even be worth rendering a 3D environment if all that mattered was the \emph{consistent appearance} of a scene?
@@ -436,9 +428,9 @@ Ramsey sentences attempt to do without theoretical terms, so perhaps we could co
 
   
 
-The epistemological relationship is beneficial because it facilitates critical thinking methods like the Socratic method, rather than a dependency on something akin to confabulatory divination.  
+%The epistemological relationship is beneficial because it facilitates critical thinking methods like the Socratic method, rather than a dependency on something akin to confabulatory divination.  
 
-One example of what I would classify as a dialectical model is what is known as an adversarial model. Adversarial models in the past (e.g. Generative Adversarial Models, or GANs) relied on a neural network architecture which pitted one ``sub-network'' against another.  One was typically called a Generator, and the other a Discriminator.  This can be used for example to learn an image model that reproduces images close to a training set.  The whole system functions in an iterative loop, such that a Generator tries to fool the Discriminator, and the information of ``failure-to-fool'' is fed back to improve the Generator.  The back-and-forth tension is a reliable feedback loop mechanism.
+%One example of what I would classify as a dialectical model is what is known as an adversarial model. Adversarial models in the past (e.g. Generative Adversarial Models, or GANs) relied on a neural network architecture which pitted one ``sub-network'' against another.  One was typically called a Generator, and the other a Discriminator.  This can be used for example to learn an image model that reproduces images close to a training set.  The whole system functions in an iterative loop, such that a Generator tries to fool the Discriminator, and the information of ``failure-to-fool'' is fed back to improve the Generator.  The back-and-forth tension is a reliable feedback loop mechanism.
 
 %I think that we should explore other forms of architecture for dialectical models, in which the internal ``competition'' among sub-nets is composed differently, and not necessarily competitive or describable as ``fooling''.  Rather, sub-nets try to compose the best argument, and other sub-nets try to poke holes.  
 
@@ -475,6 +467,20 @@ One example of what I would classify as a dialectical model is what is known as 
 
 
 If one is convinced that the epistemic stance of AI is something like epistemic structural realism, it raises an important question about why human agents do (or should) have a different stance.  The machines are structuralists.  Probably epistemic structuralists.  But are they realists, or pragmatic and adaptive structuralists?  What about humans?
+
+
+Ultimately, I see the problem of how to evaluate  scientific discovery from generative models (especially in areas like fundamental physics) as roughly falling into debates over convergent realism and structural realism.  A dialectical system may provide immediate benefits, or mitigate limitations of current generative AI.  However, the long term widespread use may result in diminishing or even negative returns when the trajectory of the entirety of human civilization is considered.  Our use of dialectical systems might lead to structural theoretical constructs which contain terms which at best do no better than human derived theories.  At worse, we might be inundated with a flood of non-efficiently testable or unfalsifiable theories.  This is a point arguably stemming from Kant, and Popper's reinterpretation:
+
+\begin{quote}
+    If I were to give some sort of modernized reconstruction, or reinterpretation, of Kant, deviating from Kant’s own view of what he had done, I should say that Kant showed that the metaphysical principle of reasonableness or self-evidence does not lead unambiguously to one and only one result or theory. It is always possible to argue, with similar apparent reasonableness, in favour of a number of different theories, and even of opposite theories. Thus if we get no help from experience, if we cannot make experiments or observations which at least tell us to eliminate certain theories—namely those which although they may seem quite reasonable, are contrary to the observed facts—then we have no hope of ever settling the claims of competing theories.
+    \citep[p. 439]{PopperCR1963}
+\end{quote}
+
+%The situation is the same we have been in with respect to human derived theories, but at least we might give an argument why we should dignify a human's unfalsifiable theory.  Perhaps we respect the phenomenological experiences of fellow humans like ourselves.  But generative models `live' in a derivative world.  Their phenomenological `experiences' are second order compared to our own.  These models do not have experiences like ours with which to ground their theories.  
+
+
+
+There theories may be in principle falsifiable, but we should also consider whether there might be sophisticated components of a generative theory (linguistic, mathematical, or otherwise) which exceed the capacity of networks of scientists to efficiently evaluate.  I argue such a potential situation represents a risk from generative AI, and it may happen in an accumulative manner as outlined in \citep{Kasirzadeh2024WIP}.  
 
 
 %\subsection{Stuff to Move or Remove}
