Reduced intro.  Maybe just bring good/coherent citation dense stuff into short intro and make ~3 page text without sections?  Can then spin off different chapter documents.

--- a/main.tex
+++ b/main.tex
@@ -163,31 +163,55 @@ I plan to assess the capabilities of generative artificial intelligence for scie
 \section{Mitigating Accumulative Risk from Generative AI in Science}
 
 
-\subsection{Introduction}
+%\subsection{Introduction}
 
 State of the art generative models have problems, like confabulation, which architectural innovations can solve.  A recent example of architectural innovation  \citep{FunSearch2024} shows how, in the context of scientific discovery, confabulations can be overcome.  What kinds of effective architectural innovations should we expect in the future, and are there limits to what we could discover even with an ideal generative model?  Are there potential risks from generative models by scientists which is particular to the context of discovery?
 
-Following Atoosa Kasirzadeh’s recent arguments for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. I propose building on her arguments by considering three important areas where we should focus efforts to mitigate accumulative risk: i) innovation in generative model architectures which reduce undesirable characteristics; ii) responsible individual use of generative models; iii) networks of scientists and the use of generative models for scientific discovery. I argue that these are the most crucial components of civilization where it is desirable to build resilience and avoid accumulative risk.  Furthermore, I argue that formal philosophers capable of interdisciplinary work are well suited to make meaningful progress towards mitigation of accumulative risk in all three areas.
+Following Atoosa Kasirzadeh’s recent arguments for considering accumulative risk from AI, I view the current state of AI in our civilization through the lens of complex systems theory. \citep{Kasirzadeh2024WIP} I propose building on her arguments by considering three important areas where we should focus efforts to mitigate accumulative risk: \textbf{i)} innovation in generative model architectures which reduce undesirable characteristics; \textbf{ii)} discussing responsible individual use of generative models; \textbf{iii)} monitoring networks of scientists and the use of generative models for scientific discovery. I argue that these are the most crucial components of civilization where it is desirable to build resilience and avoid accumulative risk. Philosophers engaging in interdisciplinary work are well suited to make meaningful contributions towards mitigation of accumulative risk in all three areas.
 
 
-With respect to i), I would like to investigate what can be called \emph{dialectical architectures} for lack of a better term.\footnote{Potential alternatives I consider  less descriptive and inclusive: dialogical, argumentative, interactive, adversarial.}  Following \citep[\S 15]{PopperCR1963}, the term `dialectic' has been used in various vague and trivial ways which I want to avoid. I primarily mean it as a shorthand to describe dynamic feedback loops between interactive and functionally specialized components in a complex system. 
-Of particular consideration here would be a sophisticated hybrid artificial neural network system, but I mean for the descriptor to also include biological brain neural networks.  
+With respect to \textbf{i)}, I consider the potential of innovative models which can be understood as having  \emph{dialectical features}.  This understanding can be grounded in the history of philosophical dialogues between interlocutors, and the notion of dialectic from argumentation theory.  This process would lead towards or terminate in a `resolution'.  Such a resolution could be understood as a compromise between differences of opinion, synthesis between ideas, or belief in a more approximate truth.  Indeed, one could compare (as Popper does in \citep{PopperCR1963}) the scientific method to a more abstract notion of a dialectical process (like Hegel's) if one is careful to avoid certain pitfalls of the overly broad thesis-antithesis-synthesis framework. Under a restricted sense, I do think that `dialectical' can be responsibly used to describe the class of complex systems I want to discuss.
 
-Perhaps the most well-known example of such an architecture is a generative adversarial network (GAN).  I also consider mixture of expert (MoE) models and other hybrid architectures (perhaps also what are called neurosymbolic) which rely on certain structural, informational, or game theoretic principles (i.e. `competitive learning') between interacting sub-components (e.g. a gating or router net in an MoE).  \citep{MixtureExperts1991}  We might reasonably expect that such kinds of mechanistic components, when properly engineered and combined (also with traditional non-adversarial or non-dialectic components), might be capable of meaningfully mitigating most of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability). 
 
-On the other hand, I do think there are some helpful associations in the history of philosophy which might be relevant for understanding, explaining, or justifying expectations why such architectures might (continue to) improve the capability of generative models on such metrics.  A philosophical dialectic in rhetoric or argumentation theory would be a structured argument between interlocutors.  This process would lead towards or terminate in a `resolution'.  Such a resolution could be understood as a compromise between differences of opinion, synthesis between ideas, or belief in a more approximate truth.  Indeed, one could compare (as Popper does in \citep{PopperCR1963}) the scientific method to a dialectical process (like Hegel's) if one is careful to avoid certain pitfalls of the overly broad thesis-antithesis-synthesis framework. Under this restricted sense, I do think that `dialectical architectures' accurately describes the class of complex systems I want to discuss.
+
+
+
+
+
+%Following \citep[\S 15]{PopperCR1963}, the term `dialectic' has been used in various vague and trivial ways which I want to avoid. 
+
+%Of particular consideration here would be a sophisticated hybrid artificial neural network system, but I mean for the descriptor to also include biological brain neural networks.  
+
+
+%for lack of a better term.\footnote{Potential alternatives I consider  less descriptive and inclusive: dialogical, argumentative, interactive, adversarial.}
+
+
+
+From a systems theory point of view and formal modeling perspective, we could characterize a dialecticical system in terms of agent based modeling, game theory, and information theory.  A `dialectical architecture' for the context of this project thus describes a certain class of systems of interacting and functionally specialized components.  Perhaps the most well-known example of such an architecture is a generative adversarial network (GAN).  I also consider mixture of expert (MoE) models and other hybrid architectures (perhaps also what are called neurosymbolic) which rely on certain structural, informational, or game theoretic principles (i.e. `competitive learning') between interacting sub-components (e.g. a gating or router net in an MoE).  \citep{MixtureExperts1991}  
+
+We might reasonably expect that such kinds of mechanistic components, when properly engineered and combined (also with traditional non-adversarial or non-dialectic components), might be capable of meaningfully mitigating some of the widely acknowledged issues in widespread generative models (e.g. bias, confabulation or hallucination, explainability and interpretability).  However, the architecture of a model will only go so far in promoting responsible use of such models by individuals.  I think it will be worthwhile for philosophers to consider characterizing the epistemological relationship between a user and the generative model.  Currently, this relationship reminds  one of the consultation of a divine Oracle. 
+
+%Thus, much emphasis is given to particular fact claims and syntactic coherence.  If the former is correct, 
+
+%On the other hand, I do think there are some helpful associations in the history of philosophy which might be relevant for understanding, explaining, or justifying expectations why such architectures might (continue to) improve the capability of generative models on such metrics.  
+
+%A philosophical dialectic in rhetoric or argumentation theory would be a structured argument between interlocutors.  
+
+
 
 %and subsequent theories being born out of the competition of previous theories and their falsification.  
  
 %Interdisciplinary projects with philosophers may thus be more likely to result in beneficial dialectical architectures, which in turn may also help mitigate accumulative risk for ii) and iii).
 
-I do think that it is plausible that such dialectical systems will make great strides in the near future. However, I think the architecture of a model will only go so far in promoting responsible use of such models by individuals.  I think it will be worthwhile for philosophers to consider characterizing the epistemological relationship between a user and the generative model.  Currently, this relationship reminds  one much of the consultation of an Oracle.  
+%I do think that it is plausible that such dialectical systems will make great strides in the near future. 
+
+  
 
 %: individual use of generative models and the use of generative models in scientific networks.  
 
 % Perhaps they can also help to encourage non-Oracle use of these models as well.
 
-This is especially important when considering generative AI with the aim of generating scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can only be considered to `live' in a derivative `world'.
+This is especially important when considering generative AI with the aim of making new scientific discoveries.  Even if we might gain some justificatory support by using dialectical architectures for such discoveries, we should consider whether there may be limits to the kind of scientific knowledge obtainable.  For example, it seems that for certain contexts of discovery, a generative model might produce hypothetical claims using theoretical terms which may or may not be observable.  We know that artificial systems do not interact with the world in the same way that humans do, and if the training data is derived from human interactions with the world, AI models can only be considered to `live' in a derivative `world'.
 
 
 
